tests/errors/syn_cases10.java
public class syn_cases10 {
public static void main(String[] args){
switch(args.length){
case return 32;
}
}
}